--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/acharkizakaria/haraka-plugin-accounting-files#readme",
   "dependencies": {
     "haraka-constants": ">=1.0.4",
-    "dateformat": ">=3.0.3"
+    "dateformat": "~4"
   },
   "devDependencies": {
     "assert": "*",
